[package]
name = "measurrred"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.9.0"

eyre = "0.6.6"
thiserror = "1.0.30"

usvg = "0.20.0"
resvg = "0.20.0"
tiny-skia = "0.6.2"
ttf-parser = "0.14.0"

serde = { version = "1.0.134", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
toml = "0.5.8"

tracing = "0.1.29"
tracing-subscriber = "0.3.6"
tracing-appender = "0.2.0"
tracing-unwrap = "0.9.2"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",

    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",

    "build",
    "ApplicationModel_Activation",
    "Win32_System_Com",

    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",

    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Debug",
]

[build-dependencies]
embed-resource = "1.6.5"
