[package]
name = "measurrred"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.9.0"

eyre = "0.6.6"
thiserror = "1.0.30"

usvg = "0.21.0"
resvg = "0.21.0"
tiny-skia = "0.6.3"
ttf-parser = "0.14.0"
svgtypes = "0.8.0"

serde = { version = "1.0.136", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
toml = "0.5.8"

tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tracing-appender = "0.2.0"
tracing-unwrap = "0.9.2"

futures = "0.3.21"

url = { version = "2.2.2", features = ["serde"] }
surf = "2.3.2"
http-cache = "0.5.0"
http-cache-surf = "0.3.0"
async-std = "1.10.0"

strsim = "0.10.0"

rayon = "1.5.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.32.0"
features = [
    "alloc",

    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",

    "ApplicationModel_Activation",
    "Win32_System_Com",

    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",

    "Win32_UI_HiDpi",

    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",

    "Foundation",
    "Devices_Power",
    "System_Power",

    "Win32_UI_Shell",
]

[dev-dependencies]
criterion = "0.3.5"

[build-dependencies]
image = "0.24.0"
usvg = "0.20.0"
resvg = "0.20.0"
tiny-skia = "0.6.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "1.6.5"

[[bench]]
name = "render_widget"
harness = false


[profile.release]
panic = "abort"
lto = true
