[package]
name = "assettled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["serde"] }

thiserror = "1"

serde = { version = "1", features = ["derive"] }
toml = "0.8"

url = "2"
async-std = "1"
futures = "0.3"
