[package]
name = "knowhw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
declarrred = { path = "../declarrred" }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.35"
features = []
